<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PalmVenda</string>
    <string name="app_versao">Versão apk: 13.6</string>
    <string name="bco_versao">Versão Banco: 39</string>
    <string name="action_settings">action_settings</string>
    <string name="nav_header_desc">PalmVenda</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="home">Principal</string>
    <string name="btnCliente">Cliente</string>
    <string name="btnConsulta">Consulta</string>
    <string name="btnJustificativa">Justificativa</string>
    <string name="btnPedido">Pedido</string>
    <string name="btnProduto">Produto</string>
    <string name="btnComunicacao">Comunicação</string>
    <string name="btnpesquisar">Pesquisar</string>
    <string name="btnPrimeiro">&lt;&lt;</string>
    <string name="btnAnterior">&lt;</string>
    <string name="btnProximo">></string>
    <string name="btnUltimo">>></string>
    <string name="campoCodigo">Código</string>
    <string name="campoNome">Nome</string>
    <string name="campoEndereco">Endereço</string>
    <string name="campoUltimaCompra">Útima compra</string>
    <string name="campoFormaPagamento">Forma Pagamento</string>
    <string name="campoTelefone">Telefone</string>
    <string name="campoCpfCnpj">CPF ou CNPJ</string>
    <string name="campoAVencer">A vencer</string>
    <string name="campoVencido">Vencido</string>
    <string name="campoDocumentoVencimentoValor">Documento / Vencimento / Valor</string>
    <string name="campoHost">Host</string>
    <string name="campoUsuario">Usuário</string>
    <string name="campoSenha">Senha</string>
    <string name="campoCaminho">Caminho</string>
    <string name="campoTotalClientes">"Total de clientes: "</string>
    <string name="campoClientesPositivados">Clientes positivados: </string>
    <string name="campoPercentagemPositivacao">Percentagem positivação: </string>
    <string name="campoTotalVendas">Total das vendas: </string>
    <string name="campoPedidos">Pedidos</string>
    <string name="campoItens">Itens</string>
    <string name="btnEditar">Editar</string>
    <string name="btnExcluir">Excluir</string>
    <string name="campoTotal">Total</string>
    <string name="campoCliente">Cliente</string>
    <string name="btnHrInicio">Hr Início</string>
    <string name="btnHrFim">Hr Fim</string>
    <string name="btnSalvar">Salvar</string>
    <string name="campoHistorico">Histórico</string>
    <string name="campoJustificativa">Justificativa</string>
    <string name="campoObservacao">Observação</string>
    <string name="btnAbrir">Abrir</string>
    <string name="campoNumero">Número</string>
    <string name="campoData">Data</string>
    <string name="campoPrazo">Prazo</string>
    <string name="campoParcela">Parcela</string>
    <string name="btnHoraEntrada">Hora Entrada</string>
    <string name="btnHoraSaida">Hora Saída</string>
    <string name="btnNovo">Novo</string>
    <string name="campoProruto">Produto</string>
    <string name="campoUnidade">Unidade</string>
    <string name="campoQuantidade">Qtd.</string>
    <string name="btnPesquisar">Pesquisar</string>
    <string name="campoEstoque">Estoque</string>
    <string name="camoLinha">Linha</string>
    <string name="campoFornecedor">Fornecedor</string>
</resources>