<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campoPedidos" />

    <EditText
        android:id="@+id/txtPedidos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/lblEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campoItens" />

    <EditText
        android:id="@+id/txtItens"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnAbrir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAbrir" />

        <TextView
            android:id="@+id/txtEstoque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campoTotal" />

        <TextView
            android:id="@+id/lblTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</LinearLayout>